--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SDA_A5_2024_BradleyWeibel"
         tools:targetApi="31">
         <activity
+            android:name=".AddSongActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddVersionActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
