5th commit. Stable version. Updating of song's name. Onclick of song shows song's name and list of versions for that song. TODO next: song name must be checked for uniqueness before saving.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
             android:name=".AddVersionActivity"
             android:exported="false" />
         <activity
+            android:name=".ViewSongAndVersionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditSongActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
