9th commit. Stable version. User can go back and forth between view version and edit version. Update of version is working. TODO next: get add new version to existing song screen working.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,13 @@
             android:name=".ViewSongAndVersionsActivity"
             android:exported="false" />
         <activity
+            android:name=".ViewVersionActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditSongActivity"
             android:exported="false" />
         <activity
-            android:name=".ViewVersionActivity"
+            android:name=".EditVersionActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
