--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,16 +28,22 @@
             android:name=".AddVersionActivity"
             android:exported="false" />
         <activity
+            android:name=".AddVersionDataActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewSongAndVersionsActivity"
             android:exported="false" />
         <activity
-            android:name=".ViewVersionActivity"
+            android:name=".ViewVersionDataActivity"
             android:exported="false" />
         <activity
             android:name=".EditSongActivity"
             android:exported="false" />
         <activity
             android:name=".EditVersionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditVersionDataActivity"
             android:exported="false" />
         <activity
             android:name=".DeleteSongOrVersionActivity"
@@ -42,6 +57,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.sda_a5_2024_bradleyweibel"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
+
     </application>
 
 </manifest>
