19th commit. Incomplete stable version. Removal of possibility of zombie images after "go back", rename of song/version or deletion of song/version. Images are called and supported in all version screens. Viewing of individual images supported. Deletion of individual images supported. TODO next: (1) get images from gallery. (2) improve speed of images.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:name=".ViewVersionDataActivity"
             android:exported="false" />
         <activity
+            android:name=".ViewOrDeleteImageActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditSongActivity"
             android:exported="false" />
         <activity
