31st commit. Stable version. Images changed in welcome and instructions screens. High quality audio recording fully supported. TODO next: last big task, import gallery recordings.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
             android:name=".EditVersionActivity"
             android:exported="false" />
         <activity
+            android:name=".RecordOrPlayAudioActivity"
+            android:exported="false" />
+        <activity
             android:name=".DeleteSongOrVersionActivity"
             android:exported="false" />
         <activity
