36th commit. Stable version. Small fix for rename of audio when song's name is changed. Refactor for getting path of files, is now dynamic all over app. TODO next: (1) improve comments in document (2) larger refactor if possible

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
         </activity>
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.sda_a5_2024_bradleyweibel"
+            android:authorities="the.app.Lyricist"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
